src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsNotes__c</fullName>
        <label>Comments/Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewRoyaltyLineItems__c</fullName>
        <label>New Royalty Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldRoyaltyLineItem__c</fullName>
        <label>Old Royalty Line Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Find Royalty Check</fullName>
                </value>
                <value>
                    <fullName>Delete Royalty Line Items</fullName>
                </value>
                <value>
                    <fullName>Read Royalty Line Items</fullName>
                </value>
                <value>
                    <fullName>Insert Royalty Line Items</fullName>
                </value>
                <value>
                    <fullName>Cdex Check Upsert</fullName>
                </value>
                <value>
                    <fullName>Cdex Check Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>errorCode__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>royaltyCheck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Royalty Check</label>
        <referenceTo>Royalty_Check__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>royaltyCheck__c</columns>
        <columns>Process__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OldRoyaltyLineItem__c</columns>
        <columns>NewRoyaltyLineItems__c</columns>
        <columns>Additional_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CdexCheck_Import</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Cdex Check Upsert,Cdex Check Import</value>
        </filters>
        <label>CdexCheck Import</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>